# suraksha-ai

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
